# BigWorld

./: .clang-format  .gitignore  bigworld_cmake.py  setup_environment.sh
cmake/client/: BWClient.cmake
cmake/client/MacOS/: CMakeLists.txt
cmake/utils/: BWMacros.cmake  BWStandardProject.cmake
programming/bigworld/client/: adaptive_lod_controller.hpp  app.hpp  app_config.cpp  avatar_drop_filter.cpp  avatar_drop_filter.hpp  boids_filter.hpp  bw_winmain.cpp  bw_winmain.hpp  bwvoip.hpp  camera_app.hpp  canvas_app.hpp  chunk_entity.cpp  (+62 more)
src/: CMakeLists.txt
src/client/: CMakeLists.txt  action_matcher.cpp  action_matcher.hpp  adaptive_lod_controller.cpp  app.cpp  app_config.hpp  avatar_filter.cpp  avatar_filter.hpp  avatar_filter_callback.cpp  avatar_filter_callback.hpp  boids_filter.cpp  bwclient_filter_environment.cpp  bwclient_filter_environment.hpp  bwvoip.cpp  camera_app.cpp  canvas_app.cpp  chunk_entity.hpp  client_camera.cpp  client_camera.hpp  compile_time.cpp  connection_control.cpp  debug_app.hpp  device_app.cpp  dumb_filter.hpp  entity_factory.hpp  entity_flare_collider.cpp  entity_manager.cpp  entity_picker.cpp  entity_picker.hpp  entity_type.cpp  facade_app.hpp  finale_app.hpp  frame_rate_graph.cpp  frame_rate_graph.hpp  gui_app.cpp  latency_gui_component.hpp  lens_app.hpp  linear_path.hpp  matrix_providers.cpp  matrix_providers.hpp  (+35 more)
src/common/: closest_chunk_item.hpp  closest_triangle.hpp  py_network.cpp  py_network.hpp  py_physics2.cpp  py_server_lib.cpp  py_terrain.cpp  py_timer.cpp  py_timer.hpp  simple_client_entity.cpp  simple_client_entity.hpp
(+4827 files in other folders)
